# PyCorrectedEmissionCT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.md  codemeta.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/workflows/: pythonpackage.yml
conda/: meta.yaml
corrct/: __init__.py  _corrct.py  _projector_backends.py  attenuation.py  corrct.py  data_terms.py  denoisers.py  filters.py  models.py  operators.py  param_tuning.py  physics.py  projectors.py  regularizers.py  solvers.py  struct_illum.py  testing.py  utils_nn.py  utils_phys.py  utils_proc.py  utils_reg.py  utils_test.py
corrct/alignment/: __init__.py  centering.py  cone_beam.py  fitting.py  markers.py  shifts.py
corrct/physics/: __init__.py  materials.py  phase.py  xrf.py
corrct/processing/: __init__.py  misc.py  noise.py  post.py  pre.py
doc_sources/: Makefile  alignment_tools.md  changelog.md  cone_beam_calibration_tutorial.md  conf.py  corrct.alignment.rst  corrct.physics.rst  corrct.rst  index.rst  make.bat  physics_model.md  readme.md  tutorial.md
doc_sources/apidocs/: index.rst
doc_sources/apidocs/corrct/: corrct._projector_backends.md  corrct.alignment.centering.md  corrct.alignment.cone_beam.md  corrct.alignment.fitting.md  corrct.alignment.markers.md  corrct.alignment.md  corrct.alignment.shifts.md  corrct.data_terms.md  corrct.denoisers.md  corrct.filters.md  corrct.md  corrct.models.md  corrct.param_tuning.md  corrct.physics.attenuation.md  corrct.physics.md  corrct.physics.phase.md  corrct.physics.units.md  corrct.physics.xrf.md  corrct.processing.md  corrct.processing.misc.md  corrct.processing.noise.md  corrct.processing.post.md  corrct.processing.pre.md  corrct.projectors.md  corrct.regularizers.md  corrct.solvers.md  corrct.struct_illum.md  corrct.testing.md
docs/: .buildinfo  LICENSE.html  alignment_tools.html  attenuation_tutorial.html  changelog.html  corrct.alignment.html  corrct.html  corrct.physics.html  corrct.processing.html  genindex.html  geometry.html  index.html  modules.html  objects.inv  param_tuning.html  physics_model.html  py-modindex.html  readme.html  search.html  searchindex.js  tutorial.html
docs/_modules/: corrct.html  index.html
docs/_modules/corrct/: _projector_backends.html  attenuation.html  corrct.html  data_terms.html  denoisers.html  filters.html  models.html  operators.html  param_tuning.html  physics.html  processing.html  projectors.html  regularizers.html  solvers.html  struct_illum.html  testing.html  utils_phys.html  utils_proc.html  utils_reg.html  utils_test.html
docs/_modules/corrct/alignment/: centering.html  fitting.html  shifts.html
docs/_modules/corrct/physics/: attenuation.html  materials.html  phase.html  units.html  xraylib_helper.html  xrf.html
docs/_modules/corrct/processing/: misc.html  noise.html  post.html  pre.html
docs/_sources/: LICENSE.md.txt  alignment_tools.md.txt  attenuation_tutorial.md.txt  changelog.md.txt  corrct.processing.rst.txt  corrct.rst.txt  geometry.md.txt  index.rst.txt  modules.rst.txt  param_tuning.md.txt  physics_model.md.txt  readme.md.txt  tutorial.md.txt
docs/_sources/apidocs/corrct/: corrct.alignment.fitting.md.txt  (+16 more)
docs/apidocs/: index.html
docs/apidocs/corrct/: corrct._projector_backends.html  corrct.alignment.centering.html  corrct.alignment.fitting.html  corrct.alignment.html  corrct.alignment.shifts.html  corrct.data_terms.html  corrct.denoisers.html  corrct.filters.html  corrct.html  corrct.models.html  corrct.operators.html  corrct.param_tuning.html  corrct.physics.attenuation.html  corrct.physics.html  corrct.physics.materials.html  corrct.physics.phase.html  corrct.physics.units.html  corrct.physics.xraylib_helper.html  corrct.physics.xrf.html  corrct.processing.html  corrct.processing.misc.html  corrct.processing.noise.html  corrct.processing.post.html  corrct.processing.pre.html  corrct.projectors.html  corrct.regularizers.html  corrct.solvers.html  corrct.struct_illum.html  corrct.testing.html
docs/doctrees/: LICENSE.doctree  alignment_tools.doctree  attenuation_tutorial.doctree  changelog.doctree  corrct.alignment.doctree  corrct.doctree  corrct.physics.doctree  corrct.processing.doctree  environment.pickle  geometry.doctree  index.doctree  modules.doctree  param_tuning.doctree  physics_model.doctree  readme.doctree  tutorial.doctree
docs/doctrees/apidocs/: index.doctree
examples/: example_01_synthetic_phantom.py  example_02_synthetic_phantom_multi-detector.py  example_03_synthetic_phantom_FilterMR.py  example_04_synthetic_phantom_dead-zone_least-squares.py  example_05_synthetic_phantom_basic_regularization.py  example_06_guided_regularization.py  example_07_natural_image_multi-channel_regularization.py  example_08_synthetic_phantom_multi-channel_regularization.py  example_09_synthetic_phantom_PDHG_vs_FISTA.py  example_0n_synthetic_phantom_NNFBP.py  example_10_synthetic_phantom_MLEM_vs_SIRT.py  example_10_synthetic_phantom_dead-zone_MLEM_vs_SIRT.py
examples/alignment/: example_01_pre-alignment.py  example_02_cone-beam_calibration.py
examples/ghost_imaging/: 03_cells_3d.ipynb  data_generation.py  example_01_synthetic_3dots.py  example_02_synthetic_3dots_multi-channel.py  phantom_creation.py  reconstruction_utils.py
src/corrct/: __init__.py  _projector_backends.py  attenuation.py  data_terms.py  denoisers.py  filters.py  models.py  operators.py  param_tuning.py  projectors.py  regularizers.py  solvers.py  struct_illum.py  testing.py
src/corrct/alignment/: __init__.py  centering.py  cone_beam.py  fitting.py  markers.py  shifts.py
src/corrct/physics/: __init__.py  attenuation.py  materials.py  phase.py  units.py  xraylib_helper.py  xrf.py
src/corrct/processing/: __init__.py  misc.py  noise.py  post.py  pre.py
tests/: __init__.py  test_alignment.py  test_models.py  test_operators.py  test_param_tuning.py  test_projectors.py  test_regularizers.py  test_solvers.py  test_struct_illum.py
tests/alignment/: test_cone_beam.py  test_fitting.py
(+29 files in other folders)
