[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "corrct"
version = "1.0.0rc3"
description = "Physically corrected projectors for X-ray induced emission CT."
authors = [{name = "Nicola VIGANO", email = "nicola.vigano@cea.fr"}]
license = {file = "LICENSE.md", content-type = "text/markdown"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "scipy",
    "tqdm",
    "matplotlib",
    "scikit-image",
    "pywavelets",
    "xraylib",
]

[project.optional-dependencies]
dev = [
    # dev
    "editables>=0.5",

    # maintenance
    "build>=1.2",  # called python-build under conda-forge
    "git-changelog>=2.4",
    "twine>=5.1; python_version < '3.13'",

    # ci
    "isort",
    "pyupgrade",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    # "mypy>=1.10",
    # "types-markdown>=3.6",
    # "types-pyyaml>=6.0",
    # "flake8",
    "pylint",

    # docs
    "black>=24.4",
    # "mkdocs>=1.6",
    # "mkdocs-gen-files>=0.4",
    # "mkdocs-git-committers-plugin-2>=2.3",
    # "mkdocs-literate-nav>=0.6",
    # "mkdocs-material>=9.5",
    # "mkdocstrings[python]>=0.25",
    # "tomli>=2.0; python_version < '3.11'",
    "sphinx",
    "sphinx_rtd_theme",
    "recommonmark",

    # example data
    "pooch",
]

[project.urls]
Homepage = "https://github.com/cicwi/PyCorrectedEmissionCT"
Documentation = "https://cicwi.github.io/PyCorrectedEmissionCT"
Changelog = "https://cicwi.github.io/PyCorrectedEmissionCT/changelog"
Repository = "https://github.com/cicwi/PyCorrectedEmissionCT"
Issues = "https://github.com/cicwi/PyCorrectedEmissionCT/issues"
Discussions = "https://github.com/cicwi/PyCorrectedEmissionCT/discussions"

[tool.black]
line-length = 127
exclude = "tests/fixtures"

[tool.isort]
line_length = 127
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "corrct"
include_trailing_comma = true
